@startuml

abstract class ShapeVisitor {
  + virtual ~ShapeVisitor() = default;
  + virtual void visit(const Circle&) const = 0;
  + virtual void visit(const Square&) const = 0;
}

abstract class Shape {
  + virtual ~Shape() = default;
  + virtual void accept(const ShapeVisitor&) const = 0;
}

class Circle {
  + void accept(const ShapeVisitor&) const override;
}

class Square {
  + void accept(const ShapeVisitor&) const override;
}

class ShapeSerializer {
  + void visit(const Circle&) const override;
  + void visit(const Square&) const override;
}

class ShapeRender {
  + void visit(const Circle&) const override;
  + void visit(const Square&) const override;
}

Shape <|-- Circle
Shape <|-- Square

ShapeVisitor <|-- ShapeSerializer
ShapeVisitor <|-- ShapeRender

Shape ..> ShapeVisitor
ShapeVisitor ..> Circle
ShapeVisitor ..> Square

note left of Circle::accept
    v->visit(this)
end note

note right of Square::accept
    v->visit(this)
end note

@enduml
